--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -117,13 +117,34 @@
                 app:layout_constraintTop_toBottomOf="@+id/view3" />
 
             <ImageView
+                android:id="@+id/book_change_iv"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/ic_book_change"
+                app:layout_constraintStart_toEndOf="@+id/comm_contri_iv"
+                app:layout_constraintTop_toBottomOf="@+id/view3" />
+
+            <View
+                android:id="@+id/view6"
+                android:layout_width="1dp"
+                android:layout_height="36dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/book_change_iv"
+                app:layout_constraintTop_toBottomOf="@+id/view3" />
+
+            <ImageView
                 android:id="@+id/setting_iv"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:layout_marginStart="32dp"
                 android:layout_marginTop="16dp"
                 android:src="@drawable/ic_set_48dp"
-                app:layout_constraintStart_toEndOf="@+id/comm_contri_iv"
+                app:layout_constraintStart_toEndOf="@+id/book_change_iv"
                 app:layout_constraintTop_toBottomOf="@+id/view3" />
 
             <TextView
@@ -131,15 +152,29 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="16dp"
-                android:layout_marginStart="34dp"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="5dp"
+                android:text="@string/book_change"
+                android:textSize="8sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/textView"
+                app:layout_constraintTop_toBottomOf="@+id/book_change_iv"
+                tools:ignore="SmallSp" />
+
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginStart="28dp"
                 android:layout_marginTop="5dp"
                 android:text="@string/setting"
                 android:textSize="8sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/textView"
+                app:layout_constraintStart_toEndOf="@+id/textView4"
                 app:layout_constraintTop_toBottomOf="@+id/setting_iv"
+                app:layout_constraintVertical_bias="0.0"
                 tools:ignore="SmallSp" />
-
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
 
