--- a/app/src/main/res/layout/activity_contribute.xml
+++ b/app/src/main/res/layout/activity_contribute.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sdjy.book.view.activity.BookChangeActivity">
-
+    tools:context="com.sdjy.book.view.activity.ContributeActivity">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
@@ -26,12 +25,9 @@
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/books_srl"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar">
 
         <android.support.v7.widget.RecyclerView
@@ -47,6 +43,5 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/toolbar" />
     </android.support.v4.widget.SwipeRefreshLayout>
-
 
 </android.support.constraint.ConstraintLayout>
